[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/enemy.gd" type="Script" id=1]

[node name="enemy" type="KinematicBody2D"]

position = Vector2( 163.644, 77.5059 )
input_pickable = true
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Transform" ]
weapon1 = null
weapon2 = null
weapon3 = null

[node name="weapon1_muzzle" type="Position2D" parent="." index="0"]

_sections_unfolded = [ "Z Index" ]

[node name="weapon2_muzzle" type="Position2D" parent="." index="1"]

[node name="weapon3_muzzle" type="Position2D" parent="." index="2"]

[node name="weapon1" type="Node" parent="." index="3"]

[node name="weapon1_container" type="Node" parent="weapon1" index="0"]

[node name="weapon1_timer" type="Timer" parent="weapon1" index="1"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="weapon2" type="Node" parent="." index="4"]

[node name="weapon2_container" type="Node" parent="weapon2" index="0"]

[node name="weapon2_timer" type="Timer" parent="weapon2" index="1"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="weapon3" type="Node" parent="." index="5"]

[node name="weapon3_container" type="Node" parent="weapon3" index="0"]

[node name="weapon3_timer" type="Timer" parent="weapon3" index="1"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="Camera2D" type="Camera2D" parent="." index="6"]

anchor_mode = 1
rotating = false
current = false
zoom = Vector2( 1, 1 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = false
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false


